--- a/index.html
+++ b/index.html
@@ -2,9 +2,43 @@
 <html lang="en">
 <head>
     <title>Lecture 2 Example--- Again</title>
+    <style>
+
+    </style>
 </head>
 <body>
-    <p>This is another example</p>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+
+    <!-- Heading -->
+    <!-- h1, h2, h3, h4, .... h8 -->
+
+      <!-- Inline -->
+      <!-- em - emphasis - italics
+         b - bold - strong <strong>
+         u - underline -->
+    <h1>8 nostalgic garden flowers worth revisiting for charm, aroma</h1>
+
+    <h2>What are nostalgic flowers?</h2>
+
+    <p>    Lorem ipsum <b>dolor</b> sit amet, consectetur adipiscing elit. Donec finibus pulvinar arcu, eu lobortis felis gravida et. Mauris eu fringilla arcu. Donec ut mauris sed erat vestibulum posuere a id diam. Ut vel justo a odio bibendum faucibus in sed elit. Fusce non ante ac lectus vehicula malesuada non id dolor. Donec quis ultrices turpis, <em>sit amet dictum</em> tellus. Praesent posuere viverra ante sit amet accumsan. Vestibulum convallis mauris ac massa euismod consectetur.</p>
+
+    <h3>This is a sub article</h3>
+
+    <p>    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec finibus pulvinar arcu, eu lobortis felis gravida et. Mauris eu fringilla arcu.<b> Donec ut mauris sed erat vestibulum posuere a id diam. Ut vel justo a odio bibendum faucibus in sed elit. Fusce non ante ac lectus vehicula <em>malesuada</em> non id dolor. Donec quis ultrices turpis, sit amet dictum tellus.</b> Praesent posuere viverra ante sit amet accumsan. Vestibulum convallis mauris ac massa euismod consectetur.</p>
+    <h2>What are nostalgic flowers also?</h2>
+<p>Duis blandit placerat gravida. Donec accumsan in justo dictum venenatis. Praesent laoreet quam rutrum porta maximus. Fusce lacus turpis, vestibulum et accumsan eu, accumsan a lorem. Integer tempus justo eu nislaccumsan faucibus. Donec eu auctor neque. Etiam finibus neque nulla, ac facilisis <b><u>nulla <em>fermentum</em></u></b> auctor. Nulla vestibulum odio vitae elit pretium, nec blandit odio molestie. Phasellus euismod ligula mi, eu finibus lacus posuere et. Nam auctor venenatis dictum.</p>
+
+
+
+  
+    <!-- Anchor -->
+    <!-- Absolute links -->
+    <!-- Relative links -->
+    <a href="newPage.html">Go to next page</a>
+            <br>
+    <a href="https://rtc.edu/" target="_blank">Renton Technical College Website</a>
     
 </body>
 </html>
